# map-point-optimization

./: CMakeLists.txt  Converter.cpp  Converter.h  Frame.cpp  Frame.h  FrameDrawer.cpp  FrameDrawer.h  Initializer.cpp  Initializer.h  KeyFrame.cpp  KeyFrame.h  KeyFrameDatabase.cpp  KeyFrameDatabase.h  LocalMapping.cpp  LocalMapping.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapDrawer.cpp  MapDrawer.h  MapPoint.cpp  MapPoint.h  ORBVocabulary.h  ORBextractor.cpp  ORBmatcher.cpp  ORBmatcher.h  Optimizer.cpp  Optimizer.h  PnPsolver.cpp  README.md  README.txt  Sim3Solver.cpp  Sim3Solver.h  System.cpp  System.h  Tracking.cpp  Tracking.h  Viewer.cpp  Viewer.h  (+33 more)
Configuration/: Camera.yaml  MyCamera.yaml
